dataset1235/2025-2/610742602/users/522870177/executions/677928262_2667036473.log
== SUBMISSION (2025-08-27 15:06:43)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2f").format(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:07:45)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2f}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:06:34)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2f").format(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:07:57)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2f}".format(Kelvin))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 293.40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:06:41)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2f").format(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin: {:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:28)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 8
    print("Temperatura em Kelvin: {:.2ff}".format(Kelvin)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:05:55)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Temperatura em Kelvin:,{:.2f").format(Kelvin)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'format'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:07:59)
-- CODE: 
#Entrada de dados
celsius = float(input("Digite a temperatura em celsius: "))

#Conversão para Kelvin 
Kelvin = celsius + 273.15

#Saída com 2 casas decimais
print("Temperatura em Kelvin: {:.2f}".format(Kelvin))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 293.40
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura em celsius: Temperatura em Kelvin: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
